--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && cp -r src/functions /dist/functions",
     "preview": "astro preview"
   },
   "devDependencies": {
