--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "next-themes": "^0.2.0",
+    "react-icons": "^4.4.0",
     "react-waypoint": "^10.3.0"
   }
 }
